[package]
name = "beets_edit"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive", "help", "wrap_help"] }
color-eyre = "0.6.5"
dirs = "6.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "fmt",
    "local-time",
] }
